--- a/twitt-app/package.json
+++ b/twitt-app/package.json
@@ -9,7 +9,9 @@
     "@heroicons/react": "^1.0.6",
     "@portabletext/react": "^1.0.6",
     "@sanity/image-url": "^1.0.1",
+    "firebase": "^9.8.3",
     "next": "latest",
+    "next-auth": "^4.5.0",
     "next-sanity": "^0.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
