--- a/twitt-app/package.json
+++ b/twitt-app/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "next-auth": "^4.5.0",
     "next-sanity": "^0.5.2",
+    "nodemailer": "^6.7.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hot-toast": "^2.2.0",
